fixed velocity on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -439,12 +439,16 @@ p {
 
 /* secu section */
 
+/* .cuse2 {
+  margin-bottom: -800px!important;
+} */
+
 #secu {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   margin-top: 800px;
-  margin-bottom: -55vh;
+  margin-bottom: -50vh;
   /* gap: 50px; */
 }
 
@@ -1467,7 +1471,7 @@ p {
     grid-template-rows: 60% 1fr;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: -15vh;
+    margin-bottom: 15vh;
   }
 
   #secu img {
